Archive2/49/70912ffa70c9ef/output
main.cpp: In function 'int main()':
main.cpp:12:43: error: call of overloaded 'min(int&, int&)' is ambiguous
 cout<<"min. of integer value is="<<min(x,y); //error is call of overloaded function    is ambiguous.
                                           ^
main.cpp:12:43: note: candidates are:
main.cpp:4:3: note: T min(T, T) [with T = int]
 T min(T a,T b)
   ^
In file included from /usr/local/include/c++/4.9.0/bits/char_traits.h:39:0,
                 from /usr/local/include/c++/4.9.0/ios:40,
                 from /usr/local/include/c++/4.9.0/ostream:38,
                 from /usr/local/include/c++/4.9.0/iostream:39,
                 from main.cpp:1:
/usr/local/include/c++/4.9.0/bits/stl_algobase.h:194:5: note: const _Tp& std::min(const _Tp&, const _Tp&) [with _Tp = int]
     min(const _Tp& __a, const _Tp& __b)
     ^
main.cpp:15:44: error: call of overloaded 'min(float&, float&)' is ambiguous
 cout<<"min. of floating value is="<<min(p,q);//same error as above
                                            ^
main.cpp:15:44: note: candidates are:
main.cpp:4:3: note: T min(T, T) [with T = float]
 T min(T a,T b)
   ^
In file included from /usr/local/include/c++/4.9.0/bits/char_traits.h:39:0,
                 from /usr/local/include/c++/4.9.0/ios:40,
                 from /usr/local/include/c++/4.9.0/ostream:38,
                 from /usr/local/include/c++/4.9.0/iostream:39,
                 from main.cpp:1:
/usr/local/include/c++/4.9.0/bits/stl_algobase.h:194:5: note: const _Tp& std::min(const _Tp&, const _Tp&) [with _Tp = float]
     min(const _Tp& __a, const _Tp& __b)
     ^
main.cpp:18:61: error: call of overloaded 'min(char&, char&)' is ambiguous
 cout<<"min. of c1 and c2(basis of ASCII values)="<<min(c1,c2);// same error as    above
                                                             ^
main.cpp:18:61: note: candidates are:
main.cpp:4:3: note: T min(T, T) [with T = char]
 T min(T a,T b)
   ^
In file included from /usr/local/include/c++/4.9.0/bits/char_traits.h:39:0,
                 from /usr/local/include/c++/4.9.0/ios:40,
                 from /usr/local/include/c++/4.9.0/ostream:38,
                 from /usr/local/include/c++/4.9.0/iostream:39,
                 from main.cpp:1:
/usr/local/include/c++/4.9.0/bits/stl_algobase.h:194:5: note: const _Tp& std::min(const _Tp&, const _Tp&) [with _Tp = char]
     min(const _Tp& __a, const _Tp& __b)
     ^
main.cpp:19:7: error: 'getch' was not declared in this scope
 getch();
       ^
